--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,35 +10,7 @@ html
         include ./includes/jumbotron.jade
 
         .container
-            // Example row of columns
-            .row
-                .col-md-4
-                    h2
-                        i.glyphicon.glyphicon-hdd
-                        |  Hardware Problems
-
-                    p
-                        | Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-                    p
-                        a.btn.btn-default(href='#', role='button') View details »
-                .col-md-4
-                    h2
-                        i.glyphicon.glyphicon-list-alt
-                        |  Software Problems
-                    p
-                        | Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-                    p
-                        a.btn.btn-default(href='#', role='button') View details »
-                .col-md-4
-                    h2
-                        i.glyphicon.glyphicon-cog
-                        |  Computer Tune Up
-                    p
-                        | Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-                    p
-                        a.btn.btn-default(href='#', role='button') View details »
-            hr
-        // /container
+            block content
 
 
     script(src='javascripts/jquery-3.1.1.min.js')
