--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-inverse.navbar-fixed-top
+nav.navbar.navbar-inverse
     .container
         .navbar-header
             button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
@@ -6,7 +6,7 @@ nav.navbar.navbar-inverse.navbar-fixed-top
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.navbar-brand(href='#') PC Repair
+            a.navbar-brand(href='/') PC Repair
         #navbar.navbar-collapse.collapse
             ul.nav.navbar-nav
                 li(class=title=='Home' ? 'active' : undefined)
